[package]
edition = "2024"
name = "midas-http"
version = "0.1.0"

[dependencies]
# 简化错误处理的库，提供灵活的 anyhow::Error 类型，便于在应用层统一处理各种错误
anyhow = "*"
# 基于 Tokio 和 Hyper 的高性能异步 Web 框架，用于构建 HTTP 路由和服务
axum = "*"
# 日期和时间处理库，用于时间的解析、格式化、计算和时区转换
chrono = "*"
# 项目内部的本地依赖，引入 midas-core 核心模块的代码与逻辑
midas-core = { path = "../midas-core" }
# 通用的序列化与反序列化框架，启用 "derive" 特性以支持通过 #[derive(Serialize, Deserialize)] 宏自动实现序列化接口
serde = { version = "*", features = ["derive"] }
# Rust 异步运行时库，启用 "full" 特性以提供完整的异步 I/O、网络、时间等功能支持
tokio = { version = "*", features = ["full"] }
# 基于 Tower 的 HTTP 中间件库，启用 "cors" 特性用于处理跨域资源共享请求
tower-http = { version = "*", features = ["cors"] }
# 结构化、异步感知的诊断与日志追踪库，用于记录程序运行状态和错误追踪
tracing = "*"
# tracing 的订阅者实现，用于收集、格式化和输出 tracing 产生的日志与追踪数据
tracing-subscriber = "*"
